--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -3,7 +3,7 @@ uvicorn==0.30.6
 pymongo==4.6.1
 python-dotenv==1.0.1
 passlib[bcrypt]==1.7.4
-python-jose=3.3.0
+python-jose==3.3.0
 python-multipart==0.0.9
 requests==2.32.3
 razorpay==1.4.2
