--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -5,6 +5,8 @@ copy Backend/requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+COPY Backend/app ./app
+
+ENV PYTHONPATH=/app
 
 CMD ["uvicorn","app.main:app","--host","0.0.0.0","--port","8000"]
